add_target()

target_link_libraries(DelaunayDemo GeometryLib)

target_sources(DelaunayDemo PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../src/circle.cc)
target_sources(DelaunayDemo PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../src/triangle.cc)
target_sources(DelaunayDemo PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../src/triangle_circle.cc)
target_sources(DelaunayDemo PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../src/triangle_contains.cc)
target_sources(DelaunayDemo PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../src/triangle_divide.cc)
target_sources(DelaunayDemo PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../src/triangle_find_deepest.cc)
target_sources(DelaunayDemo PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../src/triangle_flip.cc)
target_sources(DelaunayDemo PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../src/triangle_get_all_leaves.cc)
target_sources(DelaunayDemo PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../src/triangle_get_neighbor_point_index.cc)
target_sources(DelaunayDemo PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../src/triangle_make_root.cc)
target_sources(DelaunayDemo PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../src/triangle_update_neighbor.cc)